Fixed tech stack spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,10 +414,6 @@ nav-dark {
     padding-right: 1.8%;
 
     transition: all .2s linear !important;
-
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-evenly;
 }
 
 .technology:hover {
